- Enhanced EntityDataLoader to support CSV files with the entity or service
  name on the first line, then a header line, then the data lines
- The entity-find-one.@value-field attribute can now be an existing Map
  that is not an EntityValue and if so entity fields are added to the Map
  instead of assigning the find result to @value-field

Bug Fixes:

- Due to some quirks in Shiro ehcache support it is disabled by default; it
  is still supported for use in distributed environments with shared auth
  cache (see shiro.ini for details)
- Fixed issue with entity-condition in a view-entity when the econdition
  value matched a localized string different from the original value
- Fixed issue with form-single and form-list.@transition when it matches
  a localized string (especially on MySQL or other DBs with case
  insensitive string matching), now only expands transition value if it
  contains a "${"
- Fixed not-like entity condition operator which was treated as like
- Fixed bug in EntityFind.searchFormInputs using ec.web.parameters instead
  of context; parameters are added to the context and other things may be
  too before this is called, so best to just use the context
- Changed data stored on login to be done in separate transactions so that
  the records aren't locked for the full surrounding tx preventing the
  same user from auth for other transactions
- Fixed issue with runtime/db directory not being included in gradle
  addRuntime and ant add-runtime, caused Derby to do funny things and
  OrientDB to not run at all under Tomcat and other external containers
- Fixed issue with Logger initializing before moqui.runtime is set when
  running under external servlet containers like Tomcat

===========================================================================
Release 1.3.2 - 20 Nov 2013
===========================================================================

Moqui Framework 1.3.2 is a minor new feature and bug fix release.
